--- a/Capstone_receiving.ipynb
+++ b/Capstone_receiving.ipynb
@@ -2155,24 +2155,24 @@
     }
    ],
    "source": [
-    "#Put Data into structure for XGBoost- for Total_Value \n",
+    "#Put Data into structure for XGBoost- for DYAR \n",
     "data_dmatrix = xgb.DMatrix(data=X_Models,label=y_Models)\n",
     "\n",
-    "#Train the model using the training sets for Total_Value\n",
+    "#Train the model using the training sets for DYAR\n",
     "XGB_class.fit(X_Models_train, y_Models_train)\n",
     "\n",
-    "#Predict the response for test dataset for Total_Value\n",
+    "#Predict the response for test dataset for DYAR\n",
     "y_XGB_pred = XGB_class.predict(X_Models_test)\n",
     "\n",
-    "#Calculate RMSE for Total_Value\n",
+    "#Calculate RMSE for DYAR\n",
     "rmse_XGB = np.sqrt(mean_squared_error(y_Models_test, y_XGB_pred))\n",
-    "print(\"XGBoost's RMSE for Total_Value is: %f\" % (rmse_XGB))\n",
+    "print(\"XGBoost's RMSE for DYAR is: %f\" % (rmse_XGB))\n",
     "\n",
-    "#Create error ratio to evaluate results for Total_Value\n",
+    "#Create error ratio to evaluate results for DYAR\n",
     "target_range_XGB = y_Models.max() - y_Models.min()\n",
     "print(\"XGB target range is: %f\" % (target_range_XGB))\n",
     "error_ratio_XGB = rmse_XGB/target_range_XGB\n",
-    "print(\"XGBoost's Error Ratio for Total_Value is: %f\" % (error_ratio_XGB))"
+    "print(\"XGBoost's Error Ratio for DYAR is: %f\" % (error_ratio_XGB))"
    ]
   },
   {
