--- a/Capstone_rushing.ipynb
+++ b/Capstone_rushing.ipynb
@@ -1970,7 +1970,7 @@
     "# # Split the df_Models dataset\n",
     "X_Models,y_Models = possible_Corr_df.loc[:,feature_importance_list],possible_Corr_df.iloc[:,-1]\n",
     "\n",
-    "# Set the training at 30% (as above for baseline) given the modest size of the dataset (~12,000 observations)\n",
+    "# Set the training at 30% (as above for baseline) given the modest size of the dataset \n",
     "X_Models_train, X_Models_test, y_Models_train, y_Models_test = train_test_split(X_Models, y_Models, test_size=0.3,random_state=500) \n",
     "\n",
     "#print out the first five rows of the training data\n",
